[package]
name = "Simulon"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["wayland"] }
hexx = {version = "0.21.0", features = ["bevy", "algorithms"]}
lazy_static = "1.5.0"
libnoise = "1.2.0"
rand = "0.9.2"
uuid = "1.17.0"

[features]
# cargo run --features dev
dev = ["bevy/dynamic_linking", "bevy/file_watcher", "bevy/asset_processor"]

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1 # Switch to 1 for more runtime performance
# overflow-checks = false # Uncomment for better math performance

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = 'abort'
debug = 0
strip = "debuginfo"
# lto = "thin" # Enable for more inlining with a bigger tradeoff in compile times

# Ship this to players
# build command
# cargo build --profile distribution -F tracing/release_max_level_error -F log/release_max_level_off
[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1

[workspace]
resolver = "2"
